# RubytechTest1_Analytical_research_aiohttp_vs_httpx

./: .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  urls.json
logger/: logger.py
